Fixed Scrollbar

--- a/style.scss
+++ b/style.scss
@@ -118,9 +118,7 @@ body {
   }
   
   #blog,  #projects {
-    // scrollbar-width: none;
-    scrollbar-width: thin;
-    scrollbar-color: dark;
+    scrollbar-width: none;
     // overflow-y: scroll;
     // scrollbar-width: none;
     width:100%;
